--- a/software/changelog
+++ b/software/changelog
@@ -3,3 +3,6 @@
 
 2019-05-29: 2.0.1 (982826a)
 - Fix SPITFP IRQ race condition with other higher prio IRQs (through bricklib2)
+
+2020-06-10: 2.0.2 (<unknown>)
+- Add missing invalid-parameter check for set-sample-rate and set-gain functions
